.archive/authentik/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
spec:
  type: ClusterIP
  selector:
    app: authentik-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443
